GNOME Bugzilla – Bug 735014
GtkPopover smart positioning broken in RTL
Last modified: 2014-08-21 16:00:07 UTC
Created attachment 283823 [details] [review] Bug reproduction (3rd case) Gtk+ tries to automatically change the preferred popover position if it has no space to show it due to the proximity of the window edge. This algorithm seems to be broken when RTL is enabled. For example, if the popover is as near to the left window edge so it won't fit if the popover is renderer using GTK_POS_LEFT, this happens: 1) LTR && preferred position LEFT -> final position RIGHT 2) LTR && preferred position RIGHT -> final position RIGHT 3) RTL && preferred position LEFT -> final position LEFT 4) RTL && preferred position RIGHT -> final position LEFT So, for RTL, popover is not show properly whenever position I set as the preferred one. The attachment illustrate the 3rd case.